fixed h3 menu actricle hover overlap

--- a/style.scss
+++ b/style.scss
@@ -460,16 +460,6 @@ footer {
             text-overflow: ellipsis;
             }
         }
-        &:hover h3{
-            @media (max-width: 1320px) {
-                width: 280px;
-                height: 20px;
-                overflow: hidden;
-                white-space: nowrap; 
-                text-overflow: ellipsis;
-                }
-
-        }
 
         h3 {
             font-weight: 500;
